--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
-		<title>Storystrap Template</title>
+		<title>Stock Watch API | Jennifer Bland</title>
 		<meta name="generator" content="Bootply" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
