--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,11 +27,12 @@ footer {
 }
 
 .stockBox {
-  border: 1px solid gray;
+  border: 1px solid #ccc;
   border-radius: 8px;
   margin-top: 75px;
   padding: 20px 10px;
   background-color: #fff;
+  box-shadow: 0px 0px 8px #bbb;
 }
 
 .table {
