--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,55 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<meta charset="utf-8">
-		<title>Stock Watch API | Jennifer Bland</title>
-		<meta name="generator" content="Bootply" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-		<link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-      <!-- bower:css -->
-      <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css" />
-      <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css" />
-      <!-- endbower -->
-      <!-- bower:js -->
-      <script src="/lib/jquery/dist/jquery.js"></script>
-      <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
-      <!-- endbower -->
-      <!-- inject:css -->
-      <link rel="stylesheet" href="/css/styles.css">
-      <!-- endinject -->
-      <!-- inject:js -->
-      <script src="/js/app.js"></script>
-      <!-- endinject -->
-		<!--[if lt IE 9]>
-			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-	</head>
+
+    <% include ./partials/head %>
 
 	<body>
-        <header class="navbar navbar-inverse navbar-fixed-top" role="banner">
-          <div class="container">
-            <div class="navbar-header">
-              <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a href="/" class="navbar-brand">Stock Watch</a>
-            </div>
-            <nav class="collapse navbar-collapse" role="navigation">
-              <ul class="nav navbar-nav pull-right">
-                <li class="active"><a href="/">Home</a></li>
-              </ul>
-            </nav>
-          </div>
-        </header>
+
+        <% include ./partials/nav %>
 
         <div class="container">
 
             <div class="col-xs-12 col-md-4 col-md-offset-4 stockBox">
+
+                <h1 class="text-center homeTitle text-success">Stock Watch</h1>
 
                 <form class="form-inline text-center getStock">
                     <div class="form-group">
@@ -62,27 +24,27 @@
                     <tbody class="table-striped">
                         <tr>
                             <td class="text-left"> Name </td>
-                            <td class="text-right"><span id="stockName"></span></td>
+                            <td class="text-right text-muted"><span id="stockName"></span></td>
                         </tr>
                         <tr>
                             <td class="text-left"> Symbol </td>
-                            <td class="text-right"><span id="symbol"></span></td>
+                            <td class="text-right text-muted"><span id="symbol"></span></td>
                         </tr>
                         <tr>
                             <td class="text-left"> Last Price </td>
-                            <td class="text-right"><span id="stockLastPrice"></span></td>
+                            <td class="text-right text-muted"><span id="stockLastPrice"></span></td>
                         </tr>
                         <tr>
                             <td class="text-left"> High </td>
-                            <td class="text-right"><span id="stockHigh"></span></td>
+                            <td class="text-right text-muted"><span id="stockHigh"></span></td>
                         </tr>
                         <tr>
                             <td class="text-left"> Low </td>
-                            <td class="text-right"><span id="stockLow"></span></td>
+                            <td class="text-right text-muted"><span id="stockLow"></span></td>
                         </tr>
                         <tr>
                             <td class="text-left"> Volume </td>
-                            <td class="text-right"><span id="stockVolume"></span></td>
+                            <td class="text-right text-muted"><span id="stockVolume"></span></td>
                         </tr>
                     </tbody>
 
@@ -92,21 +54,7 @@
 
         </div><!--/container-->
 
-
-        <footer class="footer">
-          <div class="container">
-              <div class="col-xs-12 text-center">
-                <ul class="list-inline">
-                  <li><a href="https://www.facebook.com/Ratracegrad"><i class="fa fa-facebook fa-2x"></i></a></li>
-                  <li><a href="https://twitter.com/ratracegrad"><i class="fa fa-twitter fa-2x"></i></a></li>
-                  <li><a href="https://www.linkedin.com/in/ratracegrad"><i class="fa fa-linkedin fa-2x"></i></a></li>
-                  <li><a href="https://github.com/ratracegrad"><i class="fa fa-github fa-2x"></i></a></li>
-                  <li><a href="http://www.jenniferbland.com/"><i class="fa fa-home fa-2x"></i></a></li>
-                </ul>
-
-              </div>
-          </div>
-        </footer>
+        <% include ./partials/footer %>
 
 	</body>
 </html>
