--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -35,6 +35,22 @@ footer {
   box-shadow: 0px 0px 8px #bbb;
 }
 
+.homeTitle {
+  font-family: 'Arizonia', cursive;
+  margin-bottom: 30px;
+}
+
 .table {
   margin-top: 30px;
+}
+
+.tableHistoryTitle {
+  font-weight: bold;
+}
+
+.tableContainer {
+  background-color: #fff;
+  box-shadow: 0px 0px 8px #bbb;
+  order: 1px solid #ccc;
+  border-radius: 8px;
 }
